# chess_engine

./: .gitignore  Bitboards.cpp  Bitboards.h  CMakeLists.txt  Log.txt  Main.cpp  Makefile  MinMax.cpp  MinMax.h  README.md  ScratchFile.txt  TestLegalMovesCode.cpp  TestLegalMovesCode.h  board_list.txt  compare_fen.py  custom_fen_5k.txt  custom_fen_file.txt  custom_moves_file.txt  gpuMon.sh  k.txt  moves.py  nodes_depth_2.txt  nodes_depth_3.txt  nodes_depth_4.txt  oldMains.txt  output.txt  perft_positions_depth_2.txt  perft_positions_depth_3.txt  perft_positions_depth_4.txt  pseudo.txt  python_moves_calc.py  shorten.py  shot_fen.fen  umwandel.py  utils.h
Chess_Library/: Bitboards.cpp  Bitboards.h  Board.cpp  Board.h  MinMax.cpp  MinMax.h
PythonSkripts/: check.py  compare_fen.py  python_perft_test.py  python_perft_with_path.py  shorten.py
